infrastructure/kustomize/overlays/production/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 3
